Fix speakers section on mobile.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -144,6 +144,22 @@ body {
 	margin: 0;
     }
 
+    .speakers .section__content {
+	flex-direction: column;
+    }
+
+    .speaker {
+	margin: 0 0 2%;
+    }
+
+    .speaker-img {
+	min-width: 160px;
+    }
+
+    .speaker-name {
+	font-size: 28px;
+    }
+
     .schedule-table td {
     	max-width: 40%;
     	font-size: 20px;
